<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/setting_title_browser"
        app:initialExpandedChildrenCount="3">

        <EditTextPreference
            android:defaultValue="https://github.com/scoute-dich/browser"
            android:icon="@drawable/star_grey"
            android:key="favoriteURL"
            android:summary="@string/setting_summary_fav"
            android:title="@string/setting_title_fav" />

        <Preference
            android:icon="@drawable/icon_earth"
            android:key="settings_start"
            android:summary="@string/setting_summary_start_control"
            android:title="@string/setting_title_start_control" />

        <Preference
            android:icon="@drawable/icon_delete"
            android:key="settings_clear"
            android:summary="@string/setting_summary_clear_control"
            android:title="@string/setting_title_clear_control" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/setting_entries_search_engine"
            android:entryValues="@array/setting_values_search_engine"
            android:icon="@drawable/icon_search"
            android:key="@string/sp_search_engine"
            android:summary="@string/setting_summary_search_engine"
            android:title="@string/setting_title_search_engine" />

        <EditTextPreference
            android:defaultValue="https://www.ecosia.org/search?q="
            android:icon="@drawable/icon_edit"
            android:key="sp_search_engine_custom"
            android:summary="@string/setting_summary_searchEngine"
            android:title="@string/setting_title_searchEngine" />

        <EditTextPreference
            android:icon="@drawable/icon_useragent"
            android:key="userAgent"
            android:selectable="true"
            android:summary="@string/setting_summary_userAgent"
            android:title="@string/setting_title_userAgent" />


    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/setting_title_app"
        app:initialExpandedChildrenCount="3">

        <Preference
            android:icon="@drawable/icon_ui"
            android:key="settings_ui"
            android:summary="@string/setting_summary_ui"
            android:title="@string/setting_title_ui" />

        <Preference
            android:icon="@drawable/filter_variant"
            android:key="settings_filter"
            android:summary="@string/setting_filter_summary"
            android:title="@string/setting_filter" />

        <Preference
            android:icon="@drawable/gesture_tap"
            android:key="settings_gesture"
            android:summary="@string/setting_gestures_use_summary"
            android:title="@string/setting_gestures" />

        <Preference
            android:icon="@drawable/icon_backup"
            android:key="settings_data"
            android:summary="@string/setting_summary_data"
            android:title="@string/setting_title_data" />

        <Preference
            android:icon="@drawable/icon_settings"
            android:key="settings_appSettings"
            android:summary="@string/setting_summary_appSettings"
            android:title="@string/setting_title_appSettings" />

    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/setting_title_others"
        app:initialExpandedChildrenCount="0">

        <Preference
            android:icon="@drawable/icon_group"
            android:key="settings_community"
            android:title="@string/setting_title_community" />

        <Preference
            android:icon="@drawable/icon_help"
            android:key="settings_help"
            android:title="@string/menu_other_help" />

        <Preference
            android:icon="@drawable/icon_copyright"
            android:key="settings_license"
            android:title="@string/setting_title_license" />

        <Preference
            android:icon="@drawable/icon_info"
            android:key="settings_info"
            android:title="@string/menu_other_info" />

    </PreferenceCategory>

</PreferenceScreen>