<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <CheckBoxPreference
        android:defaultValue="true"
        android:icon="@drawable/icon_image"
        android:key="@string/sp_images"
        android:summary="@string/setting_summary_images"
        android:title="@string/setting_title_images" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:icon="@drawable/ic_save_data"
        android:key="@string/sp_savedata"
        android:summary="@string/setting_summary_save_data"
        android:title="@string/setting_title_save_data" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:icon="@drawable/icon_history"
        android:key="saveHistory"
        android:summary="@string/setting_summary_history"
        android:title="@string/setting_title_history" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:icon="@drawable/icon_remote"
        android:key="sp_remote"
        android:summary="@string/setting_summary_remote"
        android:title="@string/setting_title_remote" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:icon="@drawable/icon_location"
        android:key="@string/sp_location"
        android:summary="@string/setting_summary_location"
        android:title="@string/setting_title_location" />

    <PreferenceCategory android:title="@string/setting_title_adblock">

        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@drawable/icon_block"
            android:key="@string/sp_ad_block"
            android:summary="@string/setting_summary_adblock"
            android:title="@string/setting_title_adblock" />

        <Preference
            android:icon="@drawable/icon_list"
            android:key="start_AdBlock"
            android:summary="@string/setting_summary_whitelist"
            android:title="@string/setting_title_whitelist" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_title_javascript">

        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@drawable/icon_java"
            android:key="@string/sp_javascript"
            android:summary="@string/setting_summary_javascript"
            android:title="@string/setting_title_javascript" />

        <Preference
            android:icon="@drawable/icon_list"
            android:key="start_java"
            android:summary="@string/setting_summary_whitelistJS"
            android:title="@string/setting_title_whitelistJS" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_title_cookie">

        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@drawable/icon_cookie"
            android:key="@string/sp_cookies"
            android:summary="@string/setting_summary_cookie"
            android:title="@string/setting_title_cookie" />

        <Preference
            android:icon="@drawable/icon_list"
            android:key="start_cookie"
            android:summary="@string/setting_summary_whitelistCookie"
            android:title="@string/setting_title_whitelistCookie" />

    </PreferenceCategory>

</PreferenceScreen>