<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory android:title="@string/setting_title_behavior">

        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@drawable/icon_exit"
            android:key="sp_close_browser_confirm"
            android:summary="@string/setting_summary_confirm_exit"
            android:title="@string/setting_title_confirm_exit" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/icon_close"
            android:key="sp_close_tab_confirm"
            android:summary="@string/setting_summary_confirm_tab_close"
            android:title="@string/setting_title_confirm_tab_close" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/icon_tab_plus"
            android:key="sp_reopenLastTab"
            android:summary="@string/setting_summary_reopenLastTab"
            android:title="@string/setting_title_reopenLastTab" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_title_theme">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/setting_entries_theme"
            android:entryValues="@array/setting_values_theme"
            android:icon="@drawable/icon_ui"
            android:key="sp_theme"
            android:summary="@string/setting_theme_summary"
            android:title="@string/setting_theme" />

        <ListPreference
            android:defaultValue="100"
            android:entries="@array/setting_entries_font"
            android:entryValues="@array/setting_values_font"
            android:icon="@drawable/icon_size"
            android:key="sp_fontSize"
            android:summary="@string/setting_summary_font"
            android:title="@string/setting_title_font" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/icon_night"
            android:key="sp_invert"
            android:summary="@string/setting_summary_inverted"
            android:title="@string/setting_title_inverted" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_title_toolbar">

        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@drawable/icon_fullscreen"
            android:key="hideToolbar"
            android:summary="@string/setting_summary_hide"
            android:title="@string/setting_title_hideToolbar" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/icon_show"
            android:key="sp_toolbarShow"
            android:summary="@string/setting_summary_toolbarShow"
            android:title="@string/setting_title_toolbarShow" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/setting_entries_nav_pos"
            android:entryValues="@array/setting_values_nav_pos"
            android:icon="@drawable/icon_arrow_expand"
            android:key="nav_position"
            android:summary="@string/setting_summary_nav_pos"
            android:title="@string/setting_title_nav_pos" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_overView">

        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@drawable/view_headline"
            android:key="overView_hide"
            android:summary="@string/setting_overView_hide_summary"
            android:title="@string/setting_overView_hide_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/icon_refresh"
            android:key="start_tabStart"
            android:summary="@string/setting_overView_onStart_summary"
            android:title="@string/setting_overView_onStart_title" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/setting_entries_tab"
            android:entryValues="@array/setting_values_tab"
            android:icon="@drawable/icon_preview"
            android:key="start_tab"
            android:summary="@string/setting_summary_tab"
            android:title="@string/setting_overView" />

    </PreferenceCategory>

</PreferenceScreen>