<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference android:summary="@string/data_summary" />

    <PreferenceCategory android:title="@string/title_appData">
        <Preference
            android:icon="@drawable/icon_export"
            android:key="data_exDB"
            android:summary="@string/setting_summary_export_appData"
            android:title="@string/setting_title_export_appData" />
        <Preference
            android:icon="@drawable/icon_import"
            android:key="data_imDB"
            android:title="@string/setting_title_import_appData" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_title_adblock">
        <Preference
            android:icon="@drawable/icon_export"
            android:key="data_exAdBlock"
            android:title="@string/setting_title_export_whitelist" />
        <Preference
            android:icon="@drawable/icon_import"
            android:key="data_imAdBlock"
            android:title="@string/setting_title_import_whitelist" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_title_javascript">
        <Preference
            android:icon="@drawable/icon_export"
            android:key="data_exJava"
            android:title="@string/setting_title_export_whitelistJS" />
        <Preference
            android:icon="@drawable/icon_import"
            android:key="data_imJava"
            android:title="@string/setting_title_import_whitelistJS" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_title_cookie">
        <Preference
            android:icon="@drawable/icon_export"
            android:key="data_exCookie"
            android:title="@string/setting_title_export_whitelistCookie" />
        <Preference
            android:icon="@drawable/icon_import"
            android:key="data_imCookie"
            android:title="@string/setting_title_import_whitelistCookie" />
    </PreferenceCategory>

</PreferenceScreen>