<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference android:summary="@string/dialogHelp_filterText" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:icon="@drawable/circle_red_big"
        android:key="filter_01"
        android:title="@string/color_red" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:icon="@drawable/circle_pink_big"
        android:key="filter_02"
        android:title="@string/color_pink" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:icon="@drawable/circle_purple_big"
        android:key="filter_03"
        android:title="@string/color_purple" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:icon="@drawable/circle_blue_big"
        android:key="filter_04"
        android:title="@string/color_blue" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:icon="@drawable/circle_teal_big"
        android:key="filter_05"
        android:title="@string/color_teal" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:icon="@drawable/circle_green_big"
        android:key="filter_06"
        android:title="@string/color_green" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:icon="@drawable/circle_lime_big"
        android:key="filter_07"
        android:title="@string/color_lime" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:icon="@drawable/circle_yellow_big"
        android:key="filter_08"
        android:title="@string/color_yellow" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:icon="@drawable/circle_orange_big"
        android:key="filter_09"
        android:title="@string/color_orange" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:icon="@drawable/circle_brown_big"
        android:key="filter_10"
        android:title="@string/color_brown" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:icon="@drawable/circle_grey_big"
        android:key="filter_11"
        android:title="@string/color_grey" />

</PreferenceScreen>