<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingTop="15dp"
    android:paddingEnd="20dp"
    tools:ignore="Autofill">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ib_icon"
            android:layout_width="8dp"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:gravity="center_vertical"
            android:scaleType="fitCenter"
            android:src="@drawable/circle_red_big" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:passwordToggleEnabled="false">

            <EditText
                android:id="@+id/pass_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_title_hint"
                android:includeFontPadding="false"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="false">

        <EditText
            android:id="@+id/pass_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_url_hint"
            android:includeFontPadding="false"
            android:inputType="textUri" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="false">

        <EditText
            android:id="@+id/pass_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_sign_in_username"
            android:includeFontPadding="false"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/pass_userPW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_sign_in_password"
            android:includeFontPadding="false"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <Button
            android:id="@+id/action_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackground"
            android:includeFontPadding="false"
            android:text="@string/app_ok"
            android:textColor="?android:attr/colorAccent" />

        <Button
            android:id="@+id/action_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/action_ok"
            android:background="?attr/selectableItemBackground"
            android:includeFontPadding="false"
            android:text="@string/app_cancel"
            android:textColor="?attr/colorAccent" />

    </RelativeLayout>

</LinearLayout>