<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingTop="15dp"
    android:paddingEnd="20dp"
    tools:ignore="Autofill">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/dialog_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_title_hint"
            android:imeOptions="actionDone"
            android:includeFontPadding="false"
            android:inputType="text"
            android:selectAllOnFocus="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <Button
            android:id="@+id/action_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackground"
            android:includeFontPadding="false"
            android:text="@string/app_ok"
            android:textColor="?android:attr/colorAccent" />

        <Button
            android:id="@+id/action_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/action_ok"
            android:background="?attr/selectableItemBackground"
            android:includeFontPadding="false"
            android:text="@string/app_cancel"
            android:textColor="?android:attr/colorAccent" />

    </RelativeLayout>

</LinearLayout>